--- a/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
@@ -81,7 +81,7 @@
     <string name="button_text_unselect_pic">Deselectați</string>
     <string name="button_text_view_detail">Detalii</string>
     <string name="button_text_view_file">Fişier</string>
-    <string name="buy_a_new_phone">Actualizare stocare</string>
+    <string name="buy_a_new_phone">Obțineți mai mult spațiu de stocare</string>
     <string name="buy_immediately">Achiziționați</string>
     <string name="buy_traffic_pack">Achiziționați date suplimentare</string>
     <string name="byteShort">B</string>
