--- a/Romanian/main/Mms.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/strings.xml
@@ -685,6 +685,6 @@
     <string name="wild_msg_processing">Procesare...</string>
     <string name="wild_msg_title">Selectați numerele de telefon pentru sincronizare</string>
     <string name="xiaomi_service_number">Număr de serviciu</string>
-    <string name="yellowpage_recommend_msg">"Încercați serviciul de mesagerie MIUI"</string>
+    <string name="yellowpage_recommend_msg">"Descoperiți caracteristicile serviciului de mesagerie MIUI"</string>
     <string name="yes">OK</string>
 </resources>
