--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
@@ -347,6 +347,32 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="restart_phone_bind_message">Un mesaj text cu un cod de verificare va fi trimis la acest număr.</string>
     <string name="restart_phone_bind_title">Schimbaţi numărul de telefon pentru recuperare</string>
     <string name="scan_barcode_title">Pentru a vă conecta la contul dvs. Mi, scanaţi codul QR</string>
+    <string name="search_account_protection">Protejarea contului</string>
+    <string name="search_account_protection_desc">Protejarea contului</string>
+    <string name="search_account_protection_key_words">Protejarea contului</string>
+    <string name="search_account_protection_path">Contul Mi/Protejarea contului,Setări/Contul Mi/Protejarea contului</string>
+    <string name="search_app_name">Contul Mi</string>
+    <string name="search_bind_Account">Conturi</string>
+    <string name="search_bind_Account_desc">Conturi</string>
+    <string name="search_bind_Account_key_words">Conturi,Sina Weibo,QQ,Autorizare</string>
+    <string name="search_bind_Account_path">Contul Mi/Conturi,Setări/Contul Mi/Conturi</string>
+    <string name="search_devices">Dispozitive</string>
+    <string name="search_devices_desc">Dispozitive</string>
+    <string name="search_devices_key_words">Dispozitive</string>
+    <string name="search_devices_path">Contul Mi/Dispozitive,Setări/Contul Mi/Dispozitive</string>
+    <string name="search_logout_account">Deconectare</string>
+    <string name="search_logout_account_desc">Contul Mi</string>
+    <string name="search_logout_account_key_words">Deconectare</string>
+    <string name="search_logout_account_path">Contul Mi,Setări/Contul Mi</string>
+    <string name="search_mi_account">Contul Mi</string>
+    <string name="search_mi_account_desc">Contul Mi</string>
+    <string name="search_mi_account_key_words">Contul Mi,Conectare,creare cont,Mi Cloud,Credite Mi,Portofel Mi,Paşaport Mi,Asigurare Mi,Setare cont,Gestionare cont</string>
+    <string name="search_mi_account_path">Contul Mi,Setări/Contul Mi</string>
+    <string name="search_user_detail">Informaţii personale</string>
+    <string name="search_user_detail_bottom_key_words">Schimbare telefon,Modificare e-mail,Modificare venit,Modificare nivel educație,Modificare locație,Modificare regiune</string>
+    <string name="search_user_detail_desc">Informații personale</string>
+    <string name="search_user_detail_path">Contul Mi/Informații personale,Setări/Contul Mi/Informații personale</string>
+    <string name="search_user_detail_top_key_words">Informații personale,Modificare fotografie de profil,Modificare nume utilizator,Modificare pseudonim,Modificare dată de naștere,Modificare sex</string>
     <string name="security_question">Selectați întrebarea</string>
     <string name="security_question_answer">Introduceți răspunsul</string>
     <string name="security_question_notice_message">Adăugați telefonul înainte de a seta întrebările de siguranță pentru a putea reseta întrebările în cazul în care uitați răspunsurile</string>
