--- a/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
+++ b/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
@@ -117,15 +117,19 @@
     <string name="softap_notifif_title">Hotspot-ul \"%s\" este pornit</string>
     <string name="start_security_permission_verify_text">Verificați permisiunile cu ajutorul contului Mi</string>
     <string name="status_bar_toggle_auto_brightness">Luminozitate</string>
+    <string name="status_bar_toggle_battery_saver">Economisire acumulator</string>
+    <string name="status_bar_toggle_battery_saver_action">com.miui.securitycenter/com.miui.powercenter.savemode.PowerSaveActivity</string>
     <string name="status_bar_toggle_bluetooth">Bluetooth</string>
     <string name="status_bar_toggle_cast">Distribuiți</string>
     <string name="status_bar_toggle_data">Date mobile</string>
-    <string name="status_bar_toggle_edit">Editare</string>
+    <string name="status_bar_toggle_edit">Sortare</string>
     <string name="status_bar_toggle_flight_mode">Avion</string>
     <string name="status_bar_toggle_gps">GPS</string>
     <string name="status_bar_toggle_lock">Blocare</string>
     <string name="status_bar_toggle_midrop">Mi Drop</string>
     <string name="status_bar_toggle_mute">Silenţios</string>
+    <string name="status_bar_toggle_nfc">NFC</string>
+    <string name="status_bar_toggle_nfc_action">com.android.settings/com.android.settings.Settings$WirelessSettingsActivity</string>
     <string name="status_bar_toggle_paper_mode">Mod lectură</string>
     <string name="status_bar_toggle_power_mode">Performanţă</string>
     <string name="status_bar_toggle_quiet_mode">Nu deranjaţi</string>
