--- a/Romanian/main/ContactsProvider.apk/res/values-ro/strings.xml
+++ b/Romanian/main/ContactsProvider.apk/res/values-ro/strings.xml
@@ -13,6 +13,7 @@
     <string name="default_directory">Agendă</string>
     <string name="edit_contact">Adăugaţi la contact</string>
     <string name="local_invisible_directory">Altul</string>
+    <string name="metadata_sync_pacakge"/>
     <string name="pound_search_tip">Introduceţi numărul după  # pentru a căuta contacte</string>
     <string name="provider_label">Agendă</string>
     <string name="read_write_all_voicemail_description">Permite aplicaţiei să stocheze şi să preia toate mesajele vocale pe care acest dispozitiv le poate accesa.</string>
