--- a/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
@@ -280,8 +280,8 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_show_gender_age_title">Vârstă și sex</string>
     <string name="pref_camera_snap_enable_title">Mod captură instantanee</string>
     <string name="pref_camera_snap_entry_off">Oprit</string>
-    <string name="pref_camera_snap_entry_take_movie">Apăsați și mențineți apăsat butonul de Volum ▼ pentru a începe să filmați. Eliberați-l pentru a opri filmarea.</string>
-    <string name="pref_camera_snap_entry_take_picture">Apăsați și mențineți apăsat butonul Volum ▼ pentru a intra în modul fotografiere continuă. Eliberați butonul pentru a opri fotografierea în rafală.</string>
+    <string name="pref_camera_snap_entry_take_movie">Mod captură rapidă(videoclip).</string>
+    <string name="pref_camera_snap_entry_take_picture">Mod captură rapidă(fotografie).</string>
     <string name="pref_camera_snap_toast_when_volume_can_wake_screen">"Nu se poate utiliza modul captură instantanee în timp  ce  \"Utilizarea butoanelor de volum pentru trezire\" este activă."</string>
     <string name="pref_camera_sound_title">Sunete cameră</string>
     <string name="pref_camera_square_mode_title">Pătrat</string>
@@ -371,7 +371,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="preparing_sd">Verificare card SD…</string>
     <string name="record_back_pressed_hint">Atingeţi din nou pentru a opri înregistrarea</string>
     <string name="search_settings">Setări cameră;Calitate;Calitatea imaginii;Localizare fotografie;Localizare imagine;Detectare față;Sunete cameră</string>
-    <string name="see_qrcode_detals">Vizualizaţi detaliile</string>
+    <string name="see_qrcode_detals">Vizualizaţi detaliile codului QR</string>
     <string name="simple_mode_button_asd_flash">Dezactivaţi captarea cu bliţ</string>
     <string name="simple_mode_button_asd_hdr">Dezactivaţi captarea HDR</string>
     <string name="simple_mode_button_text_audio_capture">Dezactivaţi declanşarea prin voce</string>
