--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -77,7 +77,7 @@
     <string name="alert_secret_album_enter">Am înțeles</string>
     <string name="alert_secret_album_message">Glisați în jos din partea superioară a paginii Albume pentru a vedea albumul secret.</string>
     <string name="alert_secret_album_title">Vizualizare album secret</string>
-    <string name="all_faces">Toate fotografiile ce conțin persoane</string>
+    <string name="all_faces">Fotografiile cu această persoană</string>
     <string name="all_items_synced">Toate albumele au fost sincronizate în Mi Cloud</string>
     <string name="all_video_album_display_name">Toate videoclipurile</string>
     <string name="already_create_baby_album">Albumul copilului există deja în Mi Cloud.</string>
@@ -145,8 +145,8 @@
     <string name="cannot_remove_creator">Nu se poate elimina creatorul</string>
     <string name="cannot_send_message">Imposibil de trimis mesajul</string>
     <string name="cannot_send_message_reason">Niciun destinatar valid</string>
-    <string name="change_to_face_mode">Sortaţi după persoane</string>
-    <string name="change_to_photo_mode">Sortaţi după albume</string>
+    <string name="change_to_face_mode">Afișați doar chipul</string>
+    <string name="change_to_photo_mode">Afișați previzualizarea completă</string>
     <string name="choose_baby_sexy">Sex</string>
     <string name="choose_owner_relation">Relaţie</string>
     <string name="choose_people">Selectați albumul persoanei</string>
@@ -408,7 +408,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="menu_item_sort_size">Dimensiune</string>
     <string name="menu_view_contact">Vizualizaţi contactul</string>
     <string name="merge_album">Îmbinare</string>
-    <string name="merge_album_title">Îmbinare albume</string>
+    <string name="merge_album_title">Asociați cu o persoană</string>
     <string name="messagelist_sender_self">Eu</string>
     <string name="micloud_introduce">Salvați în mod automat fotografiile și videoclipurile(este necesar un cont Mi)</string>
     <string name="more_album_hint">, etc.</string>
@@ -455,6 +455,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="operation_move_to_other_albums">Mutați în Alte albume</string>
     <string name="operation_not_show_in_photos_tab">"Nu arăta în Fotografii"</string>
     <string name="operation_projection">Distribuiți</string>
+    <string name="operation_remove_face">Eliminați</string>
     <string name="operation_remove_from_face_album">Eliminaţi chipul</string>
     <string name="operation_remove_from_other_albums">Mutați din Alte albume</string>
     <string name="operation_remove_secret">Afișați</string>
@@ -530,11 +531,16 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="relation_with_you">Alegeți gradul de rudenie</string>
     <string name="release_space_finish_format">A fost eliberat %s spațiu de stocare intern</string>
     <string name="remind_face_recommend_confirm">Confirmați</string>
+    <string name="remove_from_album_message">Această fotografie nu va mai fi afișată aici</string>
+    <string name="remove_from_album_title">Eliminați din acest album</string>
+    <string name="remove_from_current_album">Eliminați din acest album</string>
     <string name="remove_from_other_albums_tip">Porniți sincronizarea cu Mi Cloud pentru a muta elemente din Alte albume. Mutați acum?</string>
     <string name="remove_from_secret_fail">"Nu s-a putut elimina din albumul secret"</string>
     <string name="remove_from_secret_failed_with_reason">"Nu se poate elimina din albumul secret. %1$s."</string>
     <string name="remove_from_secret_failed_with_reason_and_count">"%2$s elemente nu au putut fi eliminate din albumul secret. %1$s."</string>
     <string name="remove_from_secret_successful">Eliminat din albumul secret</string>
+    <string name="remove_to_album_title">Asociați cu</string>
+    <string name="remove_to_other_album">Asociați cu o altă persoană</string>
     <string name="rename_face_album">Schimbaţi numele</string>
     <string name="rename_fail_msg">Schimbare nume eşuată</string>
     <string name="rename_from_contact">Nume din agendă</string>
