--- a/Romanian/main/framework-res.apk/res/values-ro/strings.xml
+++ b/Romanian/main/framework-res.apk/res/values-ro/strings.xml
@@ -995,37 +995,37 @@ Contactaţi furnizorul de servicii pentru a obţine o altă cartelă SIM."</stri
      <string name="permdesc_writeSocialStream">Permite aplicaţiei să afişeze actualizări sociale de la prietenii dvs. Distribuiți cu precauţie aceste informaţii - cu această permisiune activată aplicaţia produce mesaje care pot părea că vin de la un prieten. Notă: această permisiune nu poate fi aplicată pentru toate reţelele sociale.</string>
      <string name="permdesc_writeSyncSettings">Permite unei aplicaţii să modifice setările de sincronizare ale unui cont. De exemplu, cu această permisiune aplicaţia poate activa sincronizarea aplicaţiei Persoane cu un anumit cont.</string>
      <string name="permdesc_writeVoicemail">Permite aplicației să modifice și să șteargă mesajele căsuței vocale.</string>
-     <string name="permgroupdesc_accessibilityFeatures">Funcții pe care tehnologia de asistare le poate solicita.</string>
-     <string name="permgroupdesc_accounts">Accesează conturile disponibile.</string>
-     <string name="permgroupdesc_affectsBattery">Utilizează funcţii care pot consuma rapid bateria.</string>
-     <string name="permgroupdesc_appInfo">Capacitatea de a influenţa comportamentul altor aplicaţii de pe dispozitiv.</string>
-     <string name="permgroupdesc_audioSettings">Modifică setările audio.</string>
-     <string name="permgroupdesc_bluetoothNetwork">Accesează dispozitive şi reţele prin intermediul Bluetooth.</string>
-     <string name="permgroupdesc_bookmarks">Acces direct la marcaje şi la istoricul navigării.</string>
-     <string name="permgroupdesc_calendar">Acces direct la calendar şi la evenimente.</string>
-     <string name="permgroupdesc_camera">Acces direct la camera foto pentru a realiza fotografii şi videoclipuri.</string>
-     <string name="permgroupdesc_costMoney">Efectuează acţiuni care sunt cu plată.</string>
-     <string name="permgroupdesc_developmentTools">Funcţii necesare doar pentru dezvoltatorii de aplicaţii.</string>
-     <string name="permgroupdesc_deviceAlarms">Setează alarma de trezire.</string>
-     <string name="permgroupdesc_dictionary">Citeşte cuvinte din dicţionarul utilizatorului.</string>
-     <string name="permgroupdesc_display">Influenţează interfaţa de utilizare a altor aplicaţii.</string>
-     <string name="permgroupdesc_hardwareControls">Accesează direct echipamentul hardware al receptorului.</string>
-     <string name="permgroupdesc_location">Monitorizează locaţia dvs. fizică.</string>
-     <string name="permgroupdesc_messages">Citire şi scriere mesaje SMS, e-mailuri şi alte mesaje.</string>
-     <string name="permgroupdesc_microphone">Acces direct la microfon pentru înregistrări audio.</string>
-     <string name="permgroupdesc_network">Accesează diferite funcţii ale reţelei.</string>
-     <string name="permgroupdesc_personalInfo">Acces direct la informaţii despre dvs., stocate pe cartea de vizită.</string>
-     <string name="permgroupdesc_phoneCalls">Monitorizează, înregistrează şi procesează apelurile telefonice.</string>
-     <string name="permgroupdesc_screenlock">Capacitatea de a afecta comportamentul ecranului de blocare pe dispozitivul dvs.</string>
-     <string name="permgroupdesc_socialInfo">Acces direct la informaţii despre persoanele de contact şi conexiunile dvs. sociale.</string>
-     <string name="permgroupdesc_statusBar">Modifică setările pentru bara de stare a dispozitivului.</string>
-     <string name="permgroupdesc_storage">Accesează cardul SD.</string>
-     <string name="permgroupdesc_syncSettings">Acces la setările de sincronizare.</string>
-     <string name="permgroupdesc_systemClock">Modifică ora sau fusul orar al dispozitivului.</string>
-     <string name="permgroupdesc_systemTools">Acces şi control de nivel redus al sistemului.</string>
-     <string name="permgroupdesc_voicemail">Acces direct la mesageria vocală.</string>
-     <string name="permgroupdesc_wallpaper">Modifică setările pentru imaginea de fundal a dispozitivului.</string>
-     <string name="permgroupdesc_writeDictionary">Adaugă cuvinte în dicţionarul utilizatorului.</string>
+     <string name="permgroupdesc_accessibilityFeatures">acceseze funcții pe care tehnologia de asistare le poate solicita</string>
+     <string name="permgroupdesc_accounts">acceseze conturile disponibile</string>
+     <string name="permgroupdesc_affectsBattery">utilizeze funcţii care pot consuma rapid acumulatorul</string>
+     <string name="permgroupdesc_appInfo">influenţeze comportamentul altor aplicaţii de pe dispozitiv</string>
+     <string name="permgroupdesc_audioSettings">modifice setările audio</string>
+     <string name="permgroupdesc_bluetoothNetwork">acceseze dispozitive şi reţele prin intermediul Bluetooth</string>
+     <string name="permgroupdesc_bookmarks">acceseze în mod direct marcajele şi istoricul navigării</string>
+     <string name="permgroupdesc_calendar">acceseze în mod  direct Calendarul şi evenimentele</string>
+     <string name="permgroupdesc_camera">acceseze în mod direct Camera foto pentru a realiza fotografii şi videoclipuri</string>
+     <string name="permgroupdesc_costMoney">efectueze acţiuni care implică plăți</string>
+     <string name="permgroupdesc_developmentTools">acceseze funcţii necesare doar pentru dezvoltatorii de aplicaţii</string>
+     <string name="permgroupdesc_deviceAlarms">seteze alarma de trezire</string>
+     <string name="permgroupdesc_dictionary">citească cuvinte din dicţionarul utilizatorului</string>
+     <string name="permgroupdesc_display">influenţeze interfaţa de utilizare a altor aplicaţii</string>
+     <string name="permgroupdesc_hardwareControls">acceseze în mod direct echipamentul hardware al receptorului</string>
+     <string name="permgroupdesc_location">monitorizeze locaţia dvs. fizică.</string>
+     <string name="permgroupdesc_messages">citească şi să scrie mesaje SMS, e-mailuri şi alte mesaje</string>
+     <string name="permgroupdesc_microphone">acceseze în mod direct microfonul pentru a realiza înregistrări audio</string>
+     <string name="permgroupdesc_network">acceseze diferite funcţii ale reţelei</string>
+     <string name="permgroupdesc_personalInfo">acceseze în mod direct informaţii despre dvs., stocate pe cartea de vizită</string>
+     <string name="permgroupdesc_phoneCalls">monitorizeze, să înregistreze şi să proceseze apelurile telefonice</string>
+     <string name="permgroupdesc_screenlock">afecteze comportamentul ecranului de blocare al dispozitivului dvs.</string>
+     <string name="permgroupdesc_socialInfo">acceseze în mod direct informaţii despre persoanele de contact şi conexiunile dvs. sociale</string>
+     <string name="permgroupdesc_statusBar">modifice setările pentru bara de stare a dispozitivului</string>
+     <string name="permgroupdesc_storage">acceseze cardul SD</string>
+     <string name="permgroupdesc_syncSettings">acceseze setările de sincronizare</string>
+     <string name="permgroupdesc_systemClock">modifice ora sau fusul orar al dispozitivului</string>
+     <string name="permgroupdesc_systemTools">acceseze şi să controleze resurse de nivel redus ale sistemului</string>
+     <string name="permgroupdesc_voicemail">acceseze în mod direct mesageria vocală</string>
+     <string name="permgroupdesc_wallpaper">modifice setările pentru imaginea de fundal a dispozitivului</string>
+     <string name="permgroupdesc_writeDictionary">adauge cuvinte în dicţionarul utilizatorului</string>
      <string name="permgrouplab_accessibilityFeatures">Funcții de accesibilitate</string>
      <string name="permgrouplab_accounts">Conturile dvs.</string>
      <string name="permgrouplab_affectsBattery">Capacitatea de a afecta bateria</string>
